--- a/index.html
+++ b/index.html
@@ -8,27 +8,38 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="container">
+  <section class="hero">
+    <div class="perfil">
+      <img src="assets/images/avatar-jessica.jpeg" alt="Perfil de foto">
+    </div>
+    <h2>Jessica Randall</h2>
+    <span>London, United Kingdom</span>
+    <p>"Front-end developer and avid reader."</p>
+  </section>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  <div class="features">
+    <article class="links">
+      <ul>
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">Frontend Mentor</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+    </article>
+  </div>
+</div>
   
-  <div class="attribution">
+
+  
+
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
