--- a/index.html
+++ b/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Social links profile</title>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<div class="container">
-  <section class="hero">
-    <div class="perfil">
-      <img src="assets/images/avatar-jessica.jpeg" alt="Perfil de foto">
+  <div class="container">
+    <section class="hero">
+      <div class="perfil">
+        <img src="assets/images/avatar-jessica.jpeg" alt="Perfil de foto">
+      </div>
+      <h2>Jessica Randall</h2>
+      <span>London, United Kingdom</span>
+      <p>"Front-end developer and avid reader."</p>
+    </section>
+
+    <div class="features">
+      <main>
+        <article class="content">
+          <ul class="links">
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">Frontend Mentor</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </article>
+      </main>
     </div>
-    <h2>Jessica Randall</h2>
-    <span>London, United Kingdom</span>
-    <p>"Front-end developer and avid reader."</p>
-  </section>
-
-  <div class="features">
-    <article class="links">
-      <ul>
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">Frontend Mentor</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
-      </ul>
-    </article>
   </div>
-</div>
-  
 
-  
+
+
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
 </body>
+
 </html>
